--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
 	"dependencies": {
 		"@apollo/server": "^4.11.3",
 		"graphql": "^16.3.0",
-		"graphql-typescript-server": "file:"
+		"graphql-typescript-server": "file:",
+		"uuid": "^11.1.0"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.9",
 		"@types/node": "^17.0.21",
+		"@types/uuid": "^10.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.14.0",
 		"@typescript-eslint/parser": "^5.14.0",
 		"eslint": "^8.11.0",
