--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "GraphQL / Apollo starter server in Node / Express & TypeScript",
 	"main": "index.ts",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test": "jest",
 		"start": "nodemon index.ts",
 		"build": "tsc -p ./"
 	},
@@ -18,12 +18,15 @@
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.9",
+		"@types/jest": "^29.5.14",
 		"@types/node": "^17.0.21",
 		"@types/uuid": "^10.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.14.0",
 		"@typescript-eslint/parser": "^5.14.0",
 		"eslint": "^8.11.0",
+		"jest": "^29.7.0",
 		"nodemon": "^2.0.6",
+		"ts-jest": "^29.2.6",
 		"ts-node": "^10.7.0",
 		"typescript": "^4.6.2"
 	}
