--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "GraphQL / Apollo starter server in Node / Express & TypeScript",
 	"main": "index.ts",
 	"scripts": {
-		"test": "jest",
+		"test": "jest --watch",
 		"start": "nodemon index.ts",
 		"build": "tsc -p ./"
 	},
