--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"main": "index.ts",
 	"scripts": {
 		"test": "jest --watch",
+		"test:ci": "jest",
 		"start": "nodemon index.ts",
 		"build": "tsc -p ./"
 	},
