--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,8 +21,8 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
-    - name: Build
-      run: npm run build --if-present
+    # - name: Build
+    #   run: npm run build --if-present
 
     - name: Run tests
       run: npm run test:ci
