--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
 	"dependencies": {
 		"@apollo/server": "^4.11.3",
 		"graphql": "^16.3.0",
+		"graphql-tag": "^2.12.6",
 		"graphql-typescript-server": "file:",
 		"uuid": "^11.1.0"
 	},
 	"devDependencies": {
+		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.9",
 		"@types/jest": "^29.5.14",
 		"@types/node": "^22.13.10",
