--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"author": "Andrew Buensalida",
 	"license": "ISC",
 	"dependencies": {
+		"@apollo/datasource-rest": "^6.4.1",
 		"@apollo/server": "^4.11.3",
 		"graphql": "^16.3.0",
 		"graphql-tag": "^2.12.6",
