--- a/package.json
+++ b/package.json
@@ -15,16 +15,21 @@
 		"@apollo/datasource-rest": "^6.4.1",
 		"@apollo/server": "^4.11.3",
 		"graphql": "^16.3.0",
+		"graphql-resolvers": "^0.4.2",
 		"graphql-tag": "^2.12.6",
 		"graphql-typescript-server": "file:",
-		"uuid": "^11.1.0"
+		"graphql-ws": "^6.0.4",
+		"uuid": "^11.1.0",
+		"ws": "^8.18.1"
 	},
 	"devDependencies": {
 		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.9",
+		"@types/graphql-resolvers": "^0.3.2",
 		"@types/jest": "^29.5.14",
 		"@types/node": "^22.13.10",
 		"@types/uuid": "^10.0.0",
+		"@types/ws": "^8.18.0",
 		"@typescript-eslint/eslint-plugin": "^5.14.0",
 		"@typescript-eslint/parser": "^5.14.0",
 		"eslint": "^8.11.0",
