--- a/package.json
+++ b/package.json
@@ -14,19 +14,26 @@
 	"dependencies": {
 		"@apollo/datasource-rest": "^6.4.1",
 		"@apollo/server": "^4.11.3",
+		"@graphql-tools/schema": "^10.0.23",
+		"@graphql-tools/utils": "^10.8.6",
+		"bcrypt": "^5.1.1",
+		"dotenv": "^16.4.7",
 		"graphql": "^16.3.0",
 		"graphql-resolvers": "^0.4.2",
 		"graphql-tag": "^2.12.6",
 		"graphql-typescript-server": "file:",
 		"graphql-ws": "^6.0.4",
+		"jsonwebtoken": "^9.0.2",
 		"uuid": "^11.1.0",
 		"ws": "^8.18.1"
 	},
 	"devDependencies": {
+		"@types/bcrypt": "^5.0.2",
 		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.9",
 		"@types/graphql-resolvers": "^0.3.2",
 		"@types/jest": "^29.5.14",
+		"@types/jsonwebtoken": "^9.0.9",
 		"@types/node": "^22.13.10",
 		"@types/uuid": "^10.0.0",
 		"@types/ws": "^8.18.0",
